[package]
name = "devdbd"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "rt"] }
tracing-subscriber = "0.3"
tracing-futures = "0.2"
tracing = { version = "0.1", features = ["log"] }

tonic = "0.8"
prost = "0.11"
prost-types = "0.11"

hyper = "0.14"
warp = "0.3"
http = "0.2"
tower = "0.4"

sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls"] }

[build-dependencies]
tonic-build = { version = "0.8", features = ["prost"] }